[tool.poetry]
name = "program-searcher"
version = "0.1.0"
description = ""
authors = ["jerzyb <jerzyxboksa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
