[tool.poetry]
name = "program-searcher"
version = "0.1.0-dev0" 
description = ""
authors = ["jerzyb <devjerzy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
